# core

./: Anchor.toml  README.md  package.json
.github/workflows/: app-deployment-prod.yml
app/: bun.lockb  eslint.config.mjs  package.json
app/public/metadata/: sample-deal-id-123.json  sample-deal-id-456.json
app/src/: database.generated.ts  middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/actions/: auth.ts  chat.ts  deals.ts  storage.ts  user.ts
app/src/app/chat/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/explore/: page.tsx
app/src/app/onboarding/: page.tsx
app/src/components/deal/: DealCompletionNFT.tsx
app/src/components/ui/: button.tsx  card.tsx  skeleton.tsx
app/src/services/: chatService.ts  storageService.ts  userService.ts  walletService.ts
app/src/shared/components/: ChatButton.tsx  ChatRequestsList.tsx  ConnectButton.tsx  Icon.tsx  SendChatRequest.tsx  WalletAuthButton.tsx
app/src/shared/context/: WalletContextProvider.tsx
app/src/shared/utils/: server-auth.ts  server-supabase.ts  supabase-middleware.ts  supabase.ts
app/src/types/: bs58.d.ts
app/supabase/migrations/: 20250316205654_create_users_table.sql  20250317000000_create_chat_tables.sql  20250317010000_fix_chat_participants_rls.sql  20250317020000_fix_rls_recursion.sql  20250317090000_create_deals_table.sql
docs/: MINTING_NFT.md
programs/sonicpact/: Cargo.toml
programs/sonicpact/src/: lib.rs
scripts/: README.md  generate-nft-metadata.ts  init-development.js  update-idl.ts  upload-nft-metadata.ts
tests/: sonicpact.ts
(+8 files in other folders)
